competencia2/ejerciciov2/Expr.g4
grammar Expr;
//el gramar indica como se llama el archivo
root : expr EOF;

//expr : expr MAS expr | NUM;

expr : EOF;

//en EOF estan las reglas sintacticas
MENOS : '-';
ID : [A-Za-z];
NUM : [0-9]+;
WS : [ \t\r\n]+->skip;
